--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -2,38 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dynamic Quote Generator</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="container">
-    <h1>Dynamic Quote Generator</h1>
-
-    <!-- Category Selection -->
-    <div class="category-section">
-      <label for="category-select">Select a Category:</label>
-      <select id="category-select"></select>
-      <button id="show-quote-btn">Show Quote</button>
-    </div>
-
-    <!-- Display Area -->
-    <div id="quote-display" class="quote-display"></div>
-
-    <!-- Add New Quote -->
-    <h2>Add New Quote</h2>
-    <input type="text" id="new-quote-input" placeholder="Enter quote">
-    <input type="text" id="new-author-input" placeholder="Enter author">
-    <input type="text" id="new-category-input" placeholder="Enter category">
-    <button id="add-quote-btn">Add Quote</button>
-
-    <!-- Add New Category -->
-    <h2>Add New Category</h2>
-    <input type="text" id="add-category-input" placeholder="New category name">
-    <button id="add-category-btn">Add Category</button>
-  </div>
-
+  <h1>Dynamic Quote Generator</h1>
+  <div id="app"></div>
   <script src="script.js"></script>
 </body>
 </html>
