--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -10,6 +10,13 @@
   <div id="app">
     <h1>Dynamic Quote Generator</h1>
     <button id="randomQuoteBtn">Show Random Quote</button>
+
+    <h2>Filter by Category</h2>
+<select id="categoryFilter" onchange="filterQuotes()">
+  <option value="all">All Categories</option>
+</select>
+
+
     <div id="quoteDisplay"></div>
 
     <button id="addQuoteBtn">Add New Quote</button>
